@@ -364,6 +364,8 @@ INFO_FIXERS = {
     "unused-debconf-template": ("^([^ ]+)$", r"\1 [*:*]"),
     "apache2-reverse-dependency-calls-invoke-rc.d": (
         "^" + PATH_MATCH + r":([0-9]+)$", r"[\1:\2]"),
+    "application-in-library-section": (
+        "^(.+) " + PATH_MATCH + "$", r"\1 [\2]"),
 }
 
 
